--- a/src/index.css
+++ b/src/index.css
@@ -203,3 +203,24 @@
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
   }
 }
+
+footer {
+  background-color: #0a0117; 
+  padding: 20px;
+  text-align: center;
+}
+
+.social-links a {
+  color: #ffffff;
+  margin: 0 10px;
+  font-size: 24px; 
+  transition: color 0.25s; /* Smooth color change on hover */
+}
+
+.social-links a:hover {
+  color: #1abc9c; 
+}
+
+.social-links i {
+  margin-right: 10px;
+}
