--- a/src/index.css
+++ b/src/index.css
@@ -205,7 +205,7 @@
 }
 
 .sidebar {
-  position: absolute; 
+  position: fixed; 
   top: 20%; 
   right: 0; 
   background-color: transparent; /* Transparent background */
@@ -219,10 +219,11 @@
   font-size: 24px; 
   color: #ffffff;
   transition: color 0.25s ease; 
+  z-index: 0;
 }
 
 .sidebar a:hover {
-  color: #1abc9c; 
+  color: white; 
 }
 
 .sidebar i {
@@ -234,7 +235,7 @@
   content: ''; /* This adds an empty element for the line */
   display: block;
   width: 2px; 
-  height: 80px; 
+  height: 80px;
   background-color: white; 
   margin: 20px auto 0; 
 }
