changed hover colour of social media icons

--- a/src/index.css
+++ b/src/index.css
@@ -223,7 +223,7 @@
 }
 
 .sidebar a:hover {
-  color: #1abc9c; 
+  color: #1f8de7; 
 }
 
 .sidebar i {
@@ -263,7 +263,7 @@ footer {
 }
 
 .social-links a:hover {
-  color: #1abc9c; 
+  color: #1f8de7; 
 }
 
 .social-links i {
